--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -91,7 +91,7 @@
             android:id="@+id/t.login"
             android:layout_width="360dp"
             android:layout_height="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:src="@drawable/logintext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/header" />
@@ -100,7 +100,7 @@
             android:id="@+id/gmail"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/input"
             android:hint="Mobile Number / Email"
             android:inputType="textEmailAddress"
@@ -112,7 +112,7 @@
             android:id="@+id/pass"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/input"
             android:hint="Password"
             android:inputType="textPassword"
@@ -125,7 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/button"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:text="LOGIN"
             android:textAllCaps="true"
             android:textSize="16sp"
@@ -133,6 +133,35 @@
             android:textStyle="bold"/>
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/register"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Register?"
+        android:textSize="19sp"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:foregroundGravity="center"
+        android:layout_marginRight="260dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content"/>
+
+    <TextView
+        android:id="@+id/forgetpass"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Forget Password?"
+        android:textSize="19sp"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:foregroundGravity="center"
+        android:layout_marginLeft="195dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
