--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"  xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    tools:context=".LoginActivity">
+    android:layout_height="match_parent"
+    tools:context=".LoginActivity"
+    android:background="@color/white">
 
     <View
         android:id="@+id/header"
@@ -63,7 +64,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="70dp"
-        android:src="@drawable/PeduliVaksin"
+        android:src="@drawable/pedulivaksin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -86,7 +87,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header">
+        app:layout_constraintTop_toBottomOf="@id/header"
+        >
 
         <ImageView
             android:id="@+id/t.login"
