--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -12,7 +12,8 @@
         android:layout_height="260dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"/>
 
     <ImageView
         android:id="@+id/bulet"
@@ -94,7 +95,7 @@
             android:layout_width="360dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/Register"
+            android:src="@drawable/register"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/header" />
 
