--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -100,7 +100,7 @@
             app:layout_constraintTop_toBottomOf="@id/header" />
 
         <EditText
-            android:id="@+id/gmail"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="30dp"
