--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,19 +50,33 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/hello"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Fasilitas Kesehatan"
+            android:text="Hello,"
             android:textSize="20sp"
             android:fontFamily="sans-serif"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:layout_marginLeft="50dp"
             android:gravity="center"
-            android:foregroundGravity="center"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toTopOf="@id/topbar"
-            app:layout_constraintBottom_toBottomOf="@id/topbar"
+            app:layout_constraintLeft_toLeftOf="@id/topbar"/>
+
+        <TextView
+            android:id="@+id/namauser"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Welcome to Peduli Vaksin"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginLeft="50dp"
+            android:gravity="center"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toTopOf="@id/topbar"
             app:layout_constraintLeft_toLeftOf="@id/topbar"/>
 
         <View
