done as i could

--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#288CE8"/>
+        android:color="#70acec"/>
     <corners
         android:radius="32dp"/>
 </shape>
