--- a/app/src/main/res/layout/activity_detail_contact.xml
+++ b/app/src/main/res/layout/activity_detail_contact.xml
@@ -11,7 +11,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@color/red"
+        android:background="#70acec"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
