--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,18 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/profil"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="320dp"
+        android:src="@drawable/person"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/bulet"
         android:layout_width="185dp"
@@ -50,19 +62,33 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/hello"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Fasilitas Kesehatan"
+            android:text="Hello,"
             android:textSize="20sp"
             android:fontFamily="sans-serif"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:layout_marginLeft="50dp"
             android:gravity="center"
-            android:foregroundGravity="center"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toTopOf="@id/topbar"
-            app:layout_constraintBottom_toBottomOf="@id/topbar"
+            app:layout_constraintLeft_toLeftOf="@id/topbar"/>
+
+        <TextView
+            android:id="@+id/namauser"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="20sp"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginLeft="50dp"
+            android:gravity="center"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toTopOf="@id/topbar"
             app:layout_constraintLeft_toLeftOf="@id/topbar"/>
 
         <View
